--- a/index.html
+++ b/index.html
@@ -67,18 +67,9 @@
 </div>
 
 
-
-
-
-
-
-
-
-
-  
-  <div class="attribution">
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Unwana Jack</a>.
-  </div>
+  </div> -->
 </body>
 </html>
